# igniscope

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  cliff.toml  justfile
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
src/: app.rs  archive.rs  cli.rs  error.rs  lib.rs  main.rs
tests/: cli_parse.rs
