[package]
name = "igniscope"
version = "0.1.0"
edition = "2024"
authors = ["Marcelo Amorim"]
description = "Deterministic CLI analyzer for Ignition project exports and gateway backups."
readme = "README.md"
repository = "https://github.com/marcelo-6/igniscope"
homepage = "https://github.com/marcelo-6/igniscope"
documentation = "https://docs.rs/igniscope"
keywords = ["ignition", "scada", "cli", "analyzer", "gateway"]
categories = ["command-line-utilities"]
rust-version = "1.88"
license = "MIT"
include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]
[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "8.2", default-features = true }
